--- a/assets/sass/partials/_variables.scss
+++ b/assets/sass/partials/_variables.scss
@@ -43,6 +43,7 @@ $graydd:		#dddddd;
 $grayc0:		#c0c0c0;
 $graye5:		#e5e5e5;
 $graye3:		#e3e3e3;
+$grayfe:		#fefefe;
 
 $des1:			#ca3737;
 $des2:			#2b8df1;
