--- a/assets/sass/breakpoints/_768up.scss
+++ b/assets/sass/breakpoints/_768up.scss
@@ -19,12 +19,24 @@ come into play. Have fun!
         a{
           margin: 0;
           font-size: 11px;
-          padding: 15px 9px;
+          padding: 15px 8px;
           background: url('../img/seperator.png') no-repeat scroll right center transparent!important;
         }
         &:last-child{
           a{
             background-image: none!important;
+          }
+        }
+        ul{
+          background: $grayfe;
+          width: auto;
+          min-width: 100%;
+          li{
+            a{
+              background: none repeat scroll 0 0 transparent!important;
+              color: $menu!important;
+              padding: 5px 15px;
+            }
           }
         }
       }
