--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -723,14 +723,6 @@ body {
   margin-top: 35px;
   padding: 0;
 }
-/* line 63, ../sass/breakpoints/_base.scss */
-.header .bg .gsc-control-cse form {
-  margin: 0;
-}
-/* line 66, ../sass/breakpoints/_base.scss */
-.header .bg .gsc-control-cse .gsib_a {
-  padding: 0;
-}
 /* line 71, ../sass/breakpoints/_base.scss */
 .header .logo {
   display: block;
@@ -865,126 +857,170 @@ section .newsThumbnail:hover .overlay-right .title {
   color: #0f5eac;
 }
 /* line 190, ../sass/breakpoints/_base.scss */
+section .tab-content section {
+  min-height: 330px;
+}
+/* line 193, ../sass/breakpoints/_base.scss */
 section .tab-content .newsThumbnail {
   padding: 15px 0;
   border-bottom: 1px solid #ececec;
 }
 
-/* line 198, ../sass/breakpoints/_base.scss */
+/* line 201, ../sass/breakpoints/_base.scss */
 .sub-content .content-header h2 {
   text-align: justify;
 }
-/* line 201, ../sass/breakpoints/_base.scss */
+/* line 204, ../sass/breakpoints/_base.scss */
 .sub-content .content-header .info {
   margin-bottom: 10px;
   padding-bottom: 10px;
   border-bottom: 3px solid #0f5eac;
 }
-/* line 202, ../sass/breakpoints/_base.scss */
+/* line 205, ../sass/breakpoints/_base.scss */
 .sub-content .content-header .info span {
   line-height: 30px;
   color: #0f5eac;
   margin-right: 30px;
 }
-/* line 206, ../sass/breakpoints/_base.scss */
+/* line 209, ../sass/breakpoints/_base.scss */
 .sub-content .content-header .info span i {
   color: #0f5eac;
   margin-right: 5px;
 }
-/* line 211, ../sass/breakpoints/_base.scss */
+/* line 214, ../sass/breakpoints/_base.scss */
 .sub-content .content-header .info a {
   background: #3b5998;
   color: white;
   line-height: 30px;
   padding: 5px 20px;
 }
-/* line 216, ../sass/breakpoints/_base.scss */
+/* line 219, ../sass/breakpoints/_base.scss */
 .sub-content .content-header .info a i {
   color: white;
   margin-right: 10px;
 }
-/* line 220, ../sass/breakpoints/_base.scss */
+/* line 223, ../sass/breakpoints/_base.scss */
 .sub-content .content-header .info a.tw {
   margin-left: 10px;
   background: #00b6ed;
 }
-/* line 224, ../sass/breakpoints/_base.scss */
+/* line 227, ../sass/breakpoints/_base.scss */
 .sub-content .content-header .info a:hover {
   text-decoration: none;
 }
-/* line 233, ../sass/breakpoints/_base.scss */
+/* line 236, ../sass/breakpoints/_base.scss */
 .sub-content .content-body {
   padding: 10px 0;
 }
-/* line 235, ../sass/breakpoints/_base.scss */
+/* line 238, ../sass/breakpoints/_base.scss */
 .sub-content .content-body p {
   font-size: 15px;
   color: #444;
 }
-/* line 239, ../sass/breakpoints/_base.scss */
+/* line 242, ../sass/breakpoints/_base.scss */
 .sub-content .content-body ul {
   list-style: disc;
   padding-left: 15px;
   color: #333;
 }
-/* line 244, ../sass/breakpoints/_base.scss */
+/* line 247, ../sass/breakpoints/_base.scss */
 .sub-content .content-body img {
   padding: 10px;
   max-width: 100%;
 }
-/* line 247, ../sass/breakpoints/_base.scss */
+/* line 250, ../sass/breakpoints/_base.scss */
 .sub-content .content-body img.pull-right {
   padding: 10px 0 10px 20px;
 }
-/* line 250, ../sass/breakpoints/_base.scss */
+/* line 253, ../sass/breakpoints/_base.scss */
 .sub-content .content-body img.pull-left {
   padding: 10px 20px 10px 0;
 }
-/* line 256, ../sass/breakpoints/_base.scss */
+/* line 259, ../sass/breakpoints/_base.scss */
 .sub-content .content-footer .share {
   margin-bottom: 10px;
   padding: 10px 0;
   border-top: 3px solid #0f5eac;
 }
-/* line 257, ../sass/breakpoints/_base.scss */
+/* line 260, ../sass/breakpoints/_base.scss */
 .sub-content .content-footer .share a {
   background: #3b5998;
   color: white;
   line-height: 30px;
   padding: 5px 20px;
 }
-/* line 262, ../sass/breakpoints/_base.scss */
+/* line 265, ../sass/breakpoints/_base.scss */
 .sub-content .content-footer .share a i {
   color: white;
   margin-right: 10px;
 }
-/* line 266, ../sass/breakpoints/_base.scss */
+/* line 269, ../sass/breakpoints/_base.scss */
 .sub-content .content-footer .share a.tw {
   margin-left: 10px;
   background: #00b6ed;
 }
-/* line 270, ../sass/breakpoints/_base.scss */
+/* line 273, ../sass/breakpoints/_base.scss */
 .sub-content .content-footer .share a:hover {
   text-decoration: none;
 }
+/* line 283, ../sass/breakpoints/_base.scss */
+.sub-content.category .item {
+  padding: 20px 0;
+  border-bottom: 1px solid #d5d5d5;
+}
+/* line 286, ../sass/breakpoints/_base.scss */
+.sub-content.category .item .more {
+  float: right;
+}
+/* line 291, ../sass/breakpoints/_base.scss */
+.sub-content.category .newsThumbnail img {
+  width: 202px;
+  height: 135px;
+  padding: 0;
+}
+/* line 297, ../sass/breakpoints/_base.scss */
+.sub-content.category .title {
+  margin-top: -5px;
+  font-size: 16px;
+  display: block;
+  color: #333333;
+  font-size: 18px;
+  text-decoration: none;
+}
+/* line 305, ../sass/breakpoints/_base.scss */
+.sub-content.category span {
+  color: #888888;
+  font-size: 13px;
+  margin-right: 0.8em;
+}
+/* line 309, ../sass/breakpoints/_base.scss */
+.sub-content.category span i {
+  margin-right: 0.4em;
+}
+/* line 316, ../sass/breakpoints/_base.scss */
+.sub-content.category span.desc {
+  display: block;
+  color: #333333;
+  margin: 5px 0;
+}
 
 /* SIDEBAR*/
-/* line 282, ../sass/breakpoints/_base.scss */
+/* line 326, ../sass/breakpoints/_base.scss */
 .links {
   margin: -6px 0 30px;
   padding-left: 44px;
 }
-/* line 285, ../sass/breakpoints/_base.scss */
+/* line 329, ../sass/breakpoints/_base.scss */
 .links li {
   position: relative;
   margin-bottom: 8px;
 }
-/* line 288, ../sass/breakpoints/_base.scss */
+/* line 332, ../sass/breakpoints/_base.scss */
 .links li a {
   font-size: 14px;
   color: #797979;
 }
-/* line 292, ../sass/breakpoints/_base.scss */
+/* line 336, ../sass/breakpoints/_base.scss */
 .links li:after {
   position: absolute;
   left: -26px;
@@ -996,16 +1032,16 @@ section .tab-content .newsThumbnail {
   font-weight: bold;
 }
 
-/* line 305, ../sass/breakpoints/_base.scss */
+/* line 349, ../sass/breakpoints/_base.scss */
 .big li {
   margin: 4px 0;
 }
 
-/* line 310, ../sass/breakpoints/_base.scss */
+/* line 354, ../sass/breakpoints/_base.scss */
 .login .form-group {
   margin-bottom: 6px;
 }
-/* line 313, ../sass/breakpoints/_base.scss */
+/* line 357, ../sass/breakpoints/_base.scss */
 .login .form-control {
   -moz-border-radius: 0;
   -webkit-border-radius: 0;
@@ -1013,11 +1049,11 @@ section .tab-content .newsThumbnail {
   box-shadow: none;
   border-color: #dddddd;
 }
-/* line 318, ../sass/breakpoints/_base.scss */
+/* line 362, ../sass/breakpoints/_base.scss */
 .login .btn {
   margin-top: 3px;
 }
-/* line 321, ../sass/breakpoints/_base.scss */
+/* line 365, ../sass/breakpoints/_base.scss */
 .login .btn-link {
   padding-left: 0;
   text-decoration: underline;
@@ -1025,19 +1061,19 @@ section .tab-content .newsThumbnail {
   font-size: 13px;
 }
 
-/* line 329, ../sass/breakpoints/_base.scss */
+/* line 373, ../sass/breakpoints/_base.scss */
 .last li {
   border-bottom: 1px solid #e5e5e5;
   margin-bottom: 5px;
 }
-/* line 332, ../sass/breakpoints/_base.scss */
+/* line 376, ../sass/breakpoints/_base.scss */
 .last li a {
   text-decoration: underline;
   font-size: 14px;
   color: #0f5eac;
   line-height: 19px;
 }
-/* line 338, ../sass/breakpoints/_base.scss */
+/* line 382, ../sass/breakpoints/_base.scss */
 .last li .date {
   display: block;
   color: #c0c0c0;
@@ -1046,12 +1082,12 @@ section .tab-content .newsThumbnail {
 }
 
 /* FOOTER*/
-/* line 348, ../sass/breakpoints/_base.scss */
+/* line 392, ../sass/breakpoints/_base.scss */
 footer {
   background: #0f5fac;
   margin-top: 40px;
 }
-/* line 351, ../sass/breakpoints/_base.scss */
+/* line 395, ../sass/breakpoints/_base.scss */
 footer .section-title {
   color: white;
   border-color: #4594e3;
@@ -1059,7 +1095,7 @@ footer .section-title {
   margin-bottom: 0;
   margin-top: 20px;
 }
-/* line 358, ../sass/breakpoints/_base.scss */
+/* line 402, ../sass/breakpoints/_base.scss */
 footer a {
   color: white;
   font-size: 12px;
@@ -1069,27 +1105,27 @@ footer a {
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-/* line 363, ../sass/breakpoints/_base.scss */
+/* line 407, ../sass/breakpoints/_base.scss */
 footer a:hover {
   color: #2a90f2;
   text-decoration: none;
 }
-/* line 368, ../sass/breakpoints/_base.scss */
+/* line 412, ../sass/breakpoints/_base.scss */
 footer ul {
   padding-left: 22px;
   margin: 10px 0 30px;
 }
-/* line 371, ../sass/breakpoints/_base.scss */
+/* line 415, ../sass/breakpoints/_base.scss */
 footer ul li {
   margin: 0;
   line-height: 32px;
   border-bottom: 1px solid #4594e3;
 }
-/* line 375, ../sass/breakpoints/_base.scss */
+/* line 419, ../sass/breakpoints/_base.scss */
 footer ul li:last-child {
   border-bottom: medium none;
 }
-/* line 380, ../sass/breakpoints/_base.scss */
+/* line 424, ../sass/breakpoints/_base.scss */
 footer .copyright {
   background: #0c457d;
   line-height: 42px;
@@ -1098,7 +1134,7 @@ footer .copyright {
   font-size: 13px;
   text-align: center;
 }
-/* line 387, ../sass/breakpoints/_base.scss */
+/* line 431, ../sass/breakpoints/_base.scss */
 footer .copyright a {
   color: #2a90f2;
   font-size: 13px;
@@ -1107,45 +1143,45 @@ footer .copyright a {
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
-/* line 391, ../sass/breakpoints/_base.scss */
+/* line 435, ../sass/breakpoints/_base.scss */
 footer .copyright a:hover {
   color: white;
 }
 
 /* Scrollbar */
-/* line 399, ../sass/breakpoints/_base.scss */
+/* line 443, ../sass/breakpoints/_base.scss */
 .scrollbarMain {
   clear: both;
   margin: 20px 0 0;
 }
-/* line 402, ../sass/breakpoints/_base.scss */
+/* line 446, ../sass/breakpoints/_base.scss */
 .scrollbarMain .viewport {
   height: 330px;
   overflow: hidden;
   position: relative;
 }
-/* line 408, ../sass/breakpoints/_base.scss */
+/* line 452, ../sass/breakpoints/_base.scss */
 .scrollbarMain#scrollbarLast .viewport {
   height: 147px;
 }
-/* line 412, ../sass/breakpoints/_base.scss */
+/* line 456, ../sass/breakpoints/_base.scss */
 .scrollbarMain .overview {
   list-style: none;
   position: absolute;
   left: 0;
   top: 0;
 }
-/* line 418, ../sass/breakpoints/_base.scss */
+/* line 462, ../sass/breakpoints/_base.scss */
 .scrollbarMain .thumb, .scrollbarMain .end {
   background-color: #ececec;
 }
-/* line 421, ../sass/breakpoints/_base.scss */
+/* line 465, ../sass/breakpoints/_base.scss */
 .scrollbarMain .scrollbar {
   position: relative;
   float: right;
   width: 1px;
 }
-/* line 426, ../sass/breakpoints/_base.scss */
+/* line 470, ../sass/breakpoints/_base.scss */
 .scrollbarMain .track {
   background-color: #ececec;
   height: 100%;
@@ -1153,7 +1189,7 @@ footer .copyright a:hover {
   position: relative;
   padding: 0 1px;
 }
-/* line 433, ../sass/breakpoints/_base.scss */
+/* line 477, ../sass/breakpoints/_base.scss */
 .scrollbarMain .thumb {
   height: 37px;
   width: 6px;
@@ -1163,30 +1199,30 @@ footer .copyright a:hover {
   position: absolute;
   top: 0;
 }
-/* line 442, ../sass/breakpoints/_base.scss */
+/* line 486, ../sass/breakpoints/_base.scss */
 .scrollbarMain .end {
   overflow: hidden;
   height: 5px;
   width: 6px;
 }
-/* line 447, ../sass/breakpoints/_base.scss */
+/* line 491, ../sass/breakpoints/_base.scss */
 .scrollbarMain .disable {
   display: none;
 }
 
 /* CALENDAR */
-/* line 453, ../sass/breakpoints/_base.scss */
+/* line 497, ../sass/breakpoints/_base.scss */
 .clndr {
   margin-bottom: 20px;
 }
-/* line 455, ../sass/breakpoints/_base.scss */
+/* line 499, ../sass/breakpoints/_base.scss */
 .clndr .clndr-controls {
   text-align: center;
   position: relative;
   line-height: 38px;
   background: url("../img/clndr.png") repeat scroll 0 0 transparent;
 }
-/* line 460, ../sass/breakpoints/_base.scss */
+/* line 504, ../sass/breakpoints/_base.scss */
 .clndr .clndr-controls .clndr-control-button {
   position: absolute;
   left: 10px;
@@ -1196,47 +1232,47 @@ footer .copyright a:hover {
   font-size: 11px;
   cursor: pointer;
 }
-/* line 468, ../sass/breakpoints/_base.scss */
+/* line 512, ../sass/breakpoints/_base.scss */
 .clndr .clndr-controls .clndr-control-button.rightalign {
   left: auto;
   right: 10px;
 }
-/* line 473, ../sass/breakpoints/_base.scss */
+/* line 517, ../sass/breakpoints/_base.scss */
 .clndr .clndr-controls .month {
   color: white;
   text-transform: uppercase;
 }
-/* line 478, ../sass/breakpoints/_base.scss */
+/* line 522, ../sass/breakpoints/_base.scss */
 .clndr .clndr-table {
   width: 100%;
   text-align: center;
   border: 1px solid #d5d5d5;
   background: url("../img/tr.png") repeat scroll 0 0 transparent;
 }
-/* line 483, ../sass/breakpoints/_base.scss */
+/* line 527, ../sass/breakpoints/_base.scss */
 .clndr .clndr-table .header-days {
   background: #e3e3e3;
 }
-/* line 485, ../sass/breakpoints/_base.scss */
+/* line 529, ../sass/breakpoints/_base.scss */
 .clndr .clndr-table .header-days .header-day {
   color: #888888;
   line-height: 19px;
 }
-/* line 490, ../sass/breakpoints/_base.scss */
+/* line 534, ../sass/breakpoints/_base.scss */
 .clndr .clndr-table tr {
   border-bottom: 1px solid #ececec;
   line-height: 30px;
 }
-/* line 493, ../sass/breakpoints/_base.scss */
+/* line 537, ../sass/breakpoints/_base.scss */
 .clndr .clndr-table tr td {
   border-right: 1px solid #ececec;
 }
 
-/* line 499, ../sass/breakpoints/_base.scss */
+/* line 543, ../sass/breakpoints/_base.scss */
 .desc {
   margin: 0;
 }
-/* line 501, ../sass/breakpoints/_base.scss */
+/* line 545, ../sass/breakpoints/_base.scss */
 .desc li {
   border-style: solid;
   border-width: 1px 1px 1px 8px;
@@ -1248,72 +1284,72 @@ footer .copyright a:hover {
   margin-bottom: 6px;
   padding-left: 15px;
 }
-/* line 511, ../sass/breakpoints/_base.scss */
+/* line 555, ../sass/breakpoints/_base.scss */
 .desc li.des2 {
   border-color: #2b8df1;
   color: #2b8df1;
 }
-/* line 515, ../sass/breakpoints/_base.scss */
+/* line 559, ../sass/breakpoints/_base.scss */
 .desc li.des3 {
   border-color: #3f880a;
   color: #3f880a;
 }
-/* line 519, ../sass/breakpoints/_base.scss */
+/* line 563, ../sass/breakpoints/_base.scss */
 .desc li.des4 {
   border-color: #b1b1b1;
   color: #b1b1b1;
 }
 
 /* TAB */
-/* line 527, ../sass/breakpoints/_base.scss */
+/* line 571, ../sass/breakpoints/_base.scss */
 .tabbable-line > .nav-tabs {
   border: none;
   margin: 0px;
 }
 
-/* line 531, ../sass/breakpoints/_base.scss */
+/* line 575, ../sass/breakpoints/_base.scss */
 .tabbable-line > .nav-tabs > li {
   margin-right: 2px;
 }
 
-/* line 534, ../sass/breakpoints/_base.scss */
+/* line 578, ../sass/breakpoints/_base.scss */
 .tabbable-line > .nav-tabs > li > a {
   border: 0;
   margin-right: 0;
   color: #737373;
 }
 
-/* line 539, ../sass/breakpoints/_base.scss */
+/* line 583, ../sass/breakpoints/_base.scss */
 .tabbable-line > .nav-tabs > li.open, .tabbable-line > .nav-tabs > li:hover {
   border-bottom: 4px solid #c3d8f0;
 }
 
-/* line 542, ../sass/breakpoints/_base.scss */
+/* line 586, ../sass/breakpoints/_base.scss */
 .tabbable-line > .nav-tabs > li.open > a, .tabbable-line > .nav-tabs > li:hover > a {
   border: 0;
   background: none !important;
   color: #333333;
 }
 
-/* line 547, ../sass/breakpoints/_base.scss */
+/* line 591, ../sass/breakpoints/_base.scss */
 .tabbable-line > .nav-tabs > li.open .dropdown-menu, .tabbable-line > .nav-tabs > li:hover .dropdown-menu {
   margin-top: 0px;
 }
 
-/* line 550, ../sass/breakpoints/_base.scss */
+/* line 594, ../sass/breakpoints/_base.scss */
 .tabbable-line > .nav-tabs > li.active {
   border-bottom: 4px solid #0f5eac;
   position: relative;
 }
 
-/* line 554, ../sass/breakpoints/_base.scss */
+/* line 598, ../sass/breakpoints/_base.scss */
 .tabbable-line > .nav-tabs > li.active > a {
   border: 0;
   color: #333333;
 }
 
 /* SOCIAL */
-/* line 560, ../sass/breakpoints/_base.scss */
+/* line 604, ../sass/breakpoints/_base.scss */
 .social {
   position: fixed;
   left: 0;
@@ -1321,32 +1357,32 @@ footer .copyright a:hover {
   z-index: 10000;
   width: 100%;
 }
-/* line 566, ../sass/breakpoints/_base.scss */
+/* line 610, ../sass/breakpoints/_base.scss */
 .social ul {
   margin: 0;
 }
-/* line 568, ../sass/breakpoints/_base.scss */
+/* line 612, ../sass/breakpoints/_base.scss */
 .social ul li {
   float: left;
   width: 33.3%;
 }
-/* line 571, ../sass/breakpoints/_base.scss */
+/* line 615, ../sass/breakpoints/_base.scss */
 .social ul li a {
   background: #3b5998;
   text-align: center;
   display: block;
 }
-/* line 575, ../sass/breakpoints/_base.scss */
+/* line 619, ../sass/breakpoints/_base.scss */
 .social ul li a i {
   width: 30px;
   line-height: 40px;
   color: white;
 }
-/* line 582, ../sass/breakpoints/_base.scss */
+/* line 626, ../sass/breakpoints/_base.scss */
 .social ul li.tw a {
   background: #00b6ed;
 }
-/* line 587, ../sass/breakpoints/_base.scss */
+/* line 631, ../sass/breakpoints/_base.scss */
 .social ul li.gp a {
   background: #f54c41;
 }
